--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Telegram bot with web app",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "build": "tsc",
+    "start": "node dist/bot.js"
   },
   "dependencies": {
     "telegraf": "^4.12.2",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "typescript": "^4.x.x"
   },
   "engines": {
     "node": "14.x"
