--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "start": "node dist/bot.js"
   },
   "dependencies": {
-    "telegraf": "^4.12.2",
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "telegraf": "^4.12.2",
     "typescript": "^4.x.x"
   },
   "engines": {
     "node": "14.x"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21"
   }
 }
